moving to notebooks and improving first exercises

--- a/IOT_n_National_accounts/IOT_n_national.ipynb
+++ b/IOT_n_National_accounts/IOT_n_national.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "93ed8f12-cfff-4c86-8a77-0d0870a7be97",
    "metadata": {},
    "source": [
-    "# Exercise 1\n",
+    "# Practical 1: IOT and National Accounts\n",
     "In this exercise, you will practice how to apply the three methods to calculate national GDP, using different databases and years.  \n",
     "While the exercise is quantitive, try to reason about differences and implications of the methods as well as results from the method application."
    ]
