--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -59,21 +59,21 @@
     "df = pd.read_csv('Z.txt', delimiter='\\s+', header = None) \n",
     "Z = df.to_numpy()\n",
     "\n",
-    "# Option 2: using the '/t' delimiter means any tabs are seen as delimiters, using this\n",
-    "# will result in a column of NaN values (because there are tabs at the end\n",
-    "# of each row.)\n",
-    "df = pd.read_csv('Z.txt', delimiter='\\t', header = None)\n",
-    "Z = df.to_numpy()\n",
-    "# np.delete will remove a row or column at the given index (in this case, -1 \n",
-    "# means we are targetting the last item of a list.)\n",
-    "Z = np.delete(Z, obj=-1, axis=1)\n",
+    "# # Option 2: using the '/t' delimiter means any tabs are seen as delimiters, using this\n",
+    "# # will result in a column of NaN values (because there are tabs at the end\n",
+    "# # of each row.)\n",
+    "# df = pd.read_csv('Z.txt', delimiter='\\t', header = None)\n",
+    "# Z = df.to_numpy()\n",
+    "# # np.delete will remove a row or column at the given index (in this case, -1 \n",
+    "# # means we are targetting the last item of a list.)\n",
+    "# Z = np.delete(Z, obj=-1, axis=1)\n",
     "\n",
-    "#Option 3:\n",
-    "df = pd.read_csv('Z.txt', delimiter='\\t', header = None)\n",
-    "# dropna() will drop/remove a column or row depending on the options set\n",
-    "# 'how=all' means the column is only dropped if all the values in it are NaN.\n",
-    "df = df.dropna(axis=1, how=\"all\")\n",
-    "Z = df.to_numpy()\n",
+    "# #Option 3:\n",
+    "# df = pd.read_csv('Z.txt', delimiter='\\t', header = None)\n",
+    "# # dropna() will drop/remove a column or row depending on the options set\n",
+    "# # 'how=all' means the column is only dropped if all the values in it are NaN.\n",
+    "# df = df.dropna(axis=1, how=\"all\")\n",
+    "# Z = df.to_numpy()\n",
     "\n",
     "df = pd.read_csv('x.txt', delimiter='\\t', header = None)\n",
     "x = df.to_numpy()\n",
