--- a/leontief_n_ghosh_models/ghosh_toy_model.ipynb
+++ b/leontief_n_ghosh_models/ghosh_toy_model.ipynb
@@ -21,20 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Firt import numpy and pandas\n",
     "import numpy as np\n",
@@ -50,18 +39,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>industry</th>\n",
+       "      <th>rice farm</th>\n",
+       "      <th>cattle farm</th>\n",
+       "      <th>power plant</th>\n",
+       "      <th>car maker</th>\n",
+       "      <th>insurance company</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rice</th>\n",
+       "      <td>100</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>beef</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electricity</th>\n",
+       "      <td>1600</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>900</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>4000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>car</th>\n",
+       "      <td>500</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>insurance</th>\n",
+       "      <td>300</td>\n",
+       "      <td>700</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "industry     rice farm  cattle farm  power plant  car maker  insurance company\n",
+       "product                                                                       \n",
+       "rice               100         1900            0          0                  0\n",
+       "beef                 0         1000            0          0                  0\n",
+       "electricity       1600         2500          900       1000               4000\n",
+       "car                500         1500         1500       1000               1500\n",
+       "insurance          300          700         3000       2000               1000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -664,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
