near completing 1st practical

--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -7,6 +7,14 @@
    "source": [
     "# Calculation of National Environmental Footprints\n",
     "\n",
+    "In this practical, you will calculate the total environmental footprints of a country, and the emissions and value added embodied in trade (import and export). The objectives of the practical are:\n",
+    "- To become accustomed to the structure of the MR IO system\n",
+    "- Calculate footprints\n",
+    "- Calculate emissions and value added embodied in trade\n",
+    "- Exploring changes in final expenditure\n",
+    "\n",
+    "\n",
+    "\n",
     "There are 5 tasks in this exercise. The dataset is constructed from real-world data in the year of 2015, specifically:\n",
     "\n",
     "The world economy is represented by three regions: \n",
