almost completed practical 2

--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -47,7 +47,7 @@
    "id": "1aaeffd1-b07a-41d1-8c07-f5e346518176",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "## Exercise 1\n",
     "Using the EUROSTAT data plot a graph showing the yearly GDP change using the following approaches\n",
     "\n",
     "- expenditure perspective (GDP = Consumption + Investment + Government Spending + Net Export)\n",
@@ -69,7 +69,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\fdona\\OneDrive - Universiteit Leiden\\1_CML\\6_Teaching\\EEIO\\advanced_EEIO_course_notebooks\\IOT_n_national_accounts\n",
       "Index(['DATAFLOW', 'LAST UPDATE', 'freq', 'unit', 'na_item', 'geo',\n",
       "       'TIME_PERIOD', 'OBS_VALUE', 'OBS_FLAG'],\n",
       "      dtype='object')\n",
@@ -84,14 +83,12 @@
     "\n",
     "# import modules\n",
     "import pandas as pd\n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import style\n",
     "plt.style.use('bmh')\n",
     "\n",
-    "print(os.getcwd())\n",
-    "\n",
     "# Import data\n",
+    "\n",
     "# replace None with the rest of the function to load the data \n",
     "GDP_data = pd.read_csv(\"data/eurostat/nama_10_gdp_linear.csv.gz\", compression=\"gzip\")\n",
     "\n",
@@ -207,7 +204,11 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "0e13244c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Expenditure approach\n",
     "Isolate all data for the expenditure approach:\n",
@@ -391,7 +392,7 @@
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
+    "## Exercise 2\n",
     "\n",
     "Using the CBS data plot a graph showing the yearly GDP change\n",
     "\n",
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "7a386c66-b7a8-4be5-8c33-713c682ebb99",
    "metadata": {},
    "outputs": [],
@@ -748,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "cac67f38",
    "metadata": {},
    "outputs": [],
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
    "metadata": {},
    "outputs": [],
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "36be71bb",
    "metadata": {},
    "outputs": [
