--- a/supply_n_use_tables/supply_n_use_tables.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +68,7 @@
    "source": [
     "# import modules\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import style\n",
     "plt.style.use('bmh')\n",
@@ -77,7 +77,7 @@
     "\n",
     "CBS_IO = pd.ExcelFile(f\"data/Input-Output tables 2015-2019.xlsx\", engine=\"openpyxl\")\n",
     "CBS_use = pd.ExcelFile(f\"data/Use tables 2015-2019.xlsx\", engine=\"openpyxl\")\n",
-    "CBS_supply = pd.ExcelFile(f\"data/use tables 2015-2019.xlsx\", engine=\"openpyxl\")\n",
+    "CBS_supply = pd.ExcelFile(f\"data/Supply tables 2015-2019.xlsx\", engine=\"openpyxl\")\n",
     "\n",
     "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
     "print(f\"\\nIO tables: \", *CBS_IO.sheet_names, sep='\\n')\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -194,99 +194,7 @@
       "Trade and transport margins\n",
       "Cif/fob-adjustment and reclassification\n",
       "Cif/fob reclassification\n",
-      "\n",
-      "\n",
-      "columns:\n",
-      "\n",
-      "Crop, animal production, hunting and related activities\n",
-      "Forestry and logging\n",
-      "Fishing and aquaculture\n",
-      "Extraction of crude petroleum and natural gas\n",
-      "Other mining and quarrying, except petroleum and gas\n",
-      "Mining support activities\n",
-      "Manufacture of food products\n",
-      "Manufacture of beverages\n",
-      "Manufacture of tobacco products\n",
-      "Manufacture of textiles, wearing apparel and leather\n",
-      "Manufacture of wood and products, except furniture\n",
-      "Manufacture of paper and paper products\n",
-      "Printing and reproduction of recorded media\n",
-      "Manufacture of coke and refined petroleum products\n",
-      "Manufacture of chemicals and chemical products\n",
-      "Manufacture of pharmaceutical products and preparations\n",
-      "Manufacture of rubber and plastic products\n",
-      "Manufacture of building materials\n",
-      "Manufacture of basic metals\n",
-      "Manufacture of metal products, except machinery, equipment\n",
-      "Manufacture of computer, electronic and optical products\n",
-      "Manufacture of electrical equipment\n",
-      "Manufacture of machinery and equipment n.e.c.\n",
-      "Manufacture of motor vehicles, trailers and semi-trailers\n",
-      "Manufacture of other transport equipment\n",
-      "Manufacture of furniture\n",
-      "Other manufacturing\n",
-      "Repair and installation of machinery and equipment\n",
-      "Electricity, gas, steam and air conditioning supply\n",
-      "Water collection, treatment and supply\n",
-      "Sewerage, waste management, materials recovery activities\n",
-      "Construction of buildings\n",
-      "Civil engineering\n",
-      "Specialised construction activities\n",
-      "Trade and repair of motor vehicles and motorcycles\n",
-      "Wholesale trade, except of motor vehicles and motorcycles\n",
-      "Retail trade, except of motor vehicles and motorcycles\n",
-      "Land transport and transport via pipelines\n",
-      "Water transport\n",
-      "Air transport\n",
-      "Warehousing and support activities for transportation\n",
-      "Postal and courier activities\n",
-      "Accommodation\n",
-      "Food and beverage service activities\n",
-      "Publishing activities\n",
-      "Movies, TV and music production etc\n",
-      "Programming and broadcasting activities\n",
-      "Telecommunications\n",
-      "Computer programming, consultancy and related activities\n",
-      "Information service activities\n",
-      "Financial service activities, except insurance and pension funding\n",
-      "Insurance and pension funding, except compulsory social security\n",
-      "Activities auxiliary to financial services and insurance activities\n",
-      "Imputed rents owner-occupided dwellings\n",
-      "Real estate services excluding imputed rents\n",
-      "Legal and accounting activities\n",
-      "Activities of head offices; management consultancy activities\n",
-      "Architectural, engineering activities; technical testing and analysis\n",
-      "Scientific research and development\n",
-      "Advertising and market research\n",
-      "Other professional, scientific and technical activities\n",
-      "Veterinary activities\n",
-      "Rental and leasing activities\n",
-      "Employment activities\n",
-      "Travel agency, tour operator reservation and related activities\n",
-      "Security and investigation activities\n",
-      "Services to buildings and landscape activities\n",
-      "Office administrative and other business support activities\n",
-      "Public administration and defence; compulsory social security\n",
-      "Education\n",
-      "Human health activities\n",
-      "Residential care and social work activities\n",
-      "Creative, arts and entertainment activities\n",
-      "Libraries, archives, museums and other cultural activities\n",
-      "Gambling and betting activities\n",
-      "Sports, amusement and recreation activities\n",
-      "Activities of membership organisations\n",
-      "Repair of computers, personal and household goods\n",
-      "Other personal service activities\n",
-      "Activities of households as employers of domestic personnel\n",
-      "Goods and services n.e.c.\n",
-      "Domestic supply (columns 1-81)\n",
-      "Imports of goods\n",
-      "Imports of services\n",
-      "Supply at basic prices (columns 82–85)\n",
-      "Trade and transport margins\n",
-      "Taxes on products\n",
-      "Subsidies on products (–)\n",
-      "Total\n"
+      "Supply at basic prices\n"
      ]
     }
    ],
@@ -311,7 +219,7 @@
     "use_2019_cp.index = use_2019_cp.index.str.strip()\n",
     "\n",
     "# Parse the supply data for 2019 in current prices\n",
-    "supply_2019_cp = CBS_supply.parse(\"Supply 2019 current prices\", index_col=1, header=1, skipfooter=3)\n",
+    "supply_2019_cp = CBS_supply.parse(\"Supply 2019 current prices\", index_col=1, header=1, skipfooter=2)\n",
     "supply_2019_cp = supply_2019_cp.iloc[1:, 1:]\n",
     "# eliminate leading and trailing white spaces in labels\n",
     "supply_2019_cp.columns = supply_2019_cp.columns.str.strip()\n",
@@ -319,11 +227,10 @@
     "\n",
     "# # Print the columns and index to understand how the data is structured\n",
     "print(\"index:\\n\",*supply_2019_cp.index, sep=\"\\n\")\n",
-    "print(\"\\n\\ncolumns:\\n\",*supply_2019_cp.columns, sep=\"\\n\")"
+    "# print(\"\\n\\ncolumns:\\n\",*supply_2019_cp.columns, sep=\"\\n\")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -336,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -474,20 +381,121 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Exercise 4\n",
-    "1. Following the instruction presented during the lecture implement the following two transformations methods from SUTs to IOT:\n",
-    "    - Industry Technology Assumption in Product-by-Product format\n",
-    "    - Industry Technology Assumption in Industry-by-Industry format"
+    "Following the instruction presented during the lecture implement the following two transformations methods from SUTs to IOT:\n",
+    "- Industry Technology Assumption in Product-by-Product format\n",
+    "- Industry Technology Assumption in Industry-by-Industry format\n",
+    "\n",
+    "We will only perform the transformation for those methods that don't result in negative values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], dtype: float64)\n",
+      "Series([], dtype: float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First prepare your tables for transforamtion by isolating intermediates from primary inputs and final consumption items\n",
+    "\n",
+    "# Use table\n",
+    "U = use_2019_cp.loc[:\"Other goods n.e.c.\", :\"Goods and services n.e.c.\"] # Use table\n",
+    "\n",
+    "### !!! Always pay attention whether your \"supply\" is in really in supply or make format !!! \n",
+    "V = supply_2019_cp.loc[:\"Other goods n.e.c.\", :\"Goods and services n.e.c.\"].T # Make table, the transpose of the supply table\n",
+    "\n",
+    "# Final Demand\n",
+    "F = use_2019_cp.loc[:\"Other goods n.e.c.\", \"Exports of goods from production\":\"Consumption residents in rest of the world\"].fillna(0) # Final demand\n",
+    "\n",
+    "# Primary inputs\n",
+    "W = use_2019_cp.loc[\"Other taxes on production\":\"Operating surplus (net)\", :\"Goods and services n.e.c.\"]\n",
+    "# Ensure negative values where needed\n",
+    "# Negative items\n",
+    "W.loc[\"Other subsidies on production (–)\"] = W.loc[\"Other subsidies on production (–)\"] * -1\n",
+    "\n",
+    "# Collect your total product and industry outputs\n",
+    "q = supply_2019_cp.loc[:\"Other goods n.e.c.\",\"Total\"]\n",
+    "g = supply_2019_cp.loc[\"Supply at basic prices\",:\"Goods and services n.e.c.\"]\n",
+    "\n",
+    "# Check that they match the sums in the use tables\n",
+    "q_ = U @ np.ones(U.shape[1]) + F @ np.ones(F.shape[1])\n",
+    "g_ = U.T @ np.ones(U.shape[0]) + W.T @ np.ones(W.shape[0])\n",
+    "\n",
+    "check_q = (1-q_ / q) * 100\n",
+    "check_g = (1-g_ / g) * 100\n",
+    "\n",
+    "print(check_g[check_g!=0])\n",
+    "print(check_q[check_q!=0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model B \n",
+    "\n",
+    "Product-by-product\n",
+    "\n",
+    "Industry technology assumption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fdona\\AppData\\Local\\Temp\\ipykernel_31752\\3639891327.py:3: FutureWarning: Calling a ufunc on non-aligned DataFrames (or DataFrame/Series combination). Currently, the indices are ignored and the result takes the index/columns of the first DataFrame. In the future , the DataFrames/Series will be aligned before applying the ufunc.\n",
+      "Convert one of the arguments to a NumPy array (eg 'ufunc(df1, np.asarray(df2)') to keep the current behaviour, or align manually (eg 'df1, df2 = df1.align(df2)') before passing to the ufunc to obtain the future behaviour and silence this warning.\n",
+      "  A = np.matmul(U @ np.linalg.inv(np.diag(g)), V @ np.linalg.inv(np.diag(q)))\n",
+      "C:\\Users\\fdona\\AppData\\Local\\Temp\\ipykernel_31752\\3639891327.py:14: FutureWarning: Calling a ufunc on non-aligned DataFrames (or DataFrame/Series combination). Currently, the indices are ignored and the result takes the index/columns of the first DataFrame. In the future , the DataFrames/Series will be aligned before applying the ufunc.\n",
+      "Convert one of the arguments to a NumPy array (eg 'ufunc(df1, np.asarray(df2)') to keep the current behaviour, or align manually (eg 'df1, df2 = df1.align(df2)') before passing to the ufunc to obtain the future behaviour and silence this warning.\n",
+      "  W_b = np.matmul(W @ np.linalg.inv(np.diag(g)), V)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Technical coefficient matrix\n",
+    "\n",
+    "A = np.matmul(U @ np.linalg.inv(np.diag(g)), V @ np.linalg.inv(np.diag(q)))\n",
+    "A.columns = A.index\n",
+    "\n",
+    "# Intermediates\n",
+    "Z = A @ np.diag(q)\n",
+    "\n",
+    "# Final Demand\n",
+    "\n",
+    "Y = F\n",
+    "\n",
+    "# Primary inputs\n",
+    "W_b = np.matmul(W @ np.linalg.inv(np.diag(g)), V)\n",
+    "\n",
+    "# Total product output\n",
+    "I = np.eye(q.shape[0])\n",
+    "x_out = 0\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_eeio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -501,9 +509,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "a0de1fb450ee5e26d734f0aa5b4c4b29e20575809e5e66472467df7627fd957d"
@@ -511,5 +518,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
